test/expected_cli/missing_script_file.out
shit: 1:9: error: Could not open 'zz_no_such_script_file': No such file or directory.
     1 |  ../shit zz_no_such_script_file
       |          ^~~~~~~~~~~~~~~~~~~~~~ here.
rc=127
